Revelation changelog

---------------[ xxxx-xx-xx : 0.4.4 ]---------------

2005-07-06  Erik Grinaker <erikg@codepoet.no>

	* improved the applet button behavior

2005-07-01  Erik Grinaker <erikg@codepoet.no>

	* made middle-button click on applet button move applet

2005-06-28  Erik Grinaker <erikg@codepoet.no>

	* changed default action for applet menu to "show", not "goto"

	* reordered applet prefs for menu action

2005-06-27  Erik Grinaker <erikg@codepoet.no>

	* added frame around applet entry view

2005-06-25  Erik Grinaker <erikg@codepoet.no>

	* added entry view to applet

2005-06-07  Erik Grinaker <erikg@codepoet.no>

	* applet sets cwd to users homedir on startup

2005-06-06  Erik Grinaker <erikg@codepoet.no>

	* applet automatically reloads file when changed

2005-06-03  Erik Grinaker <erikg@codepoet.no>

	* added global launcher settings to the applet preference dialog

	* applet dialogs use Revelation icon

	* applet displays info message when file not selected

	* make "Unlock file" item in applet popup menu insensitive
	when no file is selected

2005-06-02  Erik Grinaker <erikg@codepoet.no>

	* applet popup menu now actually does stuff

	* applet can now autolock file when inactive

2005-06-01  Erik Grinaker <erikg@codepoet.no>

	* moved config checking from config module to application

	* implemented initial applet configuration handling

2005-05-31  Erik Grinaker <erikg@codepoet.no>

	* removed "New file" item from toolbar

	* added new toolbar item "Add Folder", instead of creating
	folders via "Add Entry"

	* removed unit tests

2005-05-15  Erik Grinaker <erikg@codepoet.no>

	* implemented basic applet user interface

2005-04-15  Erik Grinaker <erikg@codepoet.no>

	* initial applet file handling

2005-04-14  Erik Grinaker <erikg@codepoet.no>

	* wrote initial user interface

2005-04-13  Erik Grinaker <erikg@codepoet.no>

	* added initial applet skeleton

2005-04-06  Erik Grinaker <erikg@codepoet.no>
